# pdum_rfb

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  LICENSE  README.md  TODO.md  data.json  mkdocs.yml  pyproject.toml
.claude/skills/frontend-debugging/: SKILL.md
.github/workflows/: build-nvenc-sdk-wheel.yml  build-pyav-cuda-wheel.yml  ci.yml  docs.yml  gpu-tests.yml
docs/: agentic_frontend_debugging.md  asgi.md  demo.md  development.md  gpu_zerocopy.md  guide_javascript.md  guide_python.md  index.md  installation.md  internals.md  metal_videotoolbox.md  metrics_adaptive.md  mlx_metal_videotoolbox_encoder_design.md  multiple_streams.md  notebook.md  nvenc_sdk_evaluation.md  performance.md  pipelined_encode.md  pipelined_encode_nvenc_impl.md  reference.md  remote_framebuffer.md  remote_framebuffer_addendum.md  remote_framebuffer_implementation_guide.md  rendercanvas_backend.md  roadmap.md  still_after_settle.md  video_encoding_guide.md  wgpu_nvenc_zerocopy.md
docs/demos/: anywidget.ipynb
docs/javascripts/: mathjax.js
docs/proposals/active/: client_decode_resilience.md  pipelined_encode_nvenc_impl.md  sizing_dpr_color.md  wgpu_nvenc_zerocopy.md
docs/proposals/completed/: client_decode_resilience.md  demo_refactor.md  encoder_sync_and_seq_attribution.md  mlx_metal_videotoolbox_encoder_design.md  nvenc_sdk_evaluation.md  pipelined_encode_nvenc_impl.md  remote_framebuffer.md  remote_framebuffer_addendum.md  remote_framebuffer_implementation_guide.md  rendercanvas_backend.md  sizing_dpr_color.md
examples/: mlx_vt_bench.py  mlx_vt_stream.py  nvenc_pipeline_bench.py  rendercanvas_pygfx.py
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_2fafe82766576da9___init___py.html  z_2fafe82766576da9_base_py.html  z_2fafe82766576da9_h264_cpu_py.html  z_2fafe82766576da9_image_py.html  z_2fafe82766576da9_nvenc_cpu_py.html  z_2fafe82766576da9_nvenc_cuda_py.html  z_2fafe82766576da9_nvenc_gpu_pdum_py.html  z_2fafe82766576da9_nvenc_gpu_pyav_py.html  z_2fafe82766576da9_nvenc_py.html  z_2fafe82766576da9_pyav_h264_py.html  z_2fafe82766576da9_vtenc_py.html  z_6034c9c2e63fb306___init___py.html  z_6034c9c2e63fb306_adaptive_py.html  z_6034c9c2e63fb306_asgi_py.html  z_6034c9c2e63fb306_auth_py.html  z_6034c9c2e63fb306_benchmark_py.html  z_6034c9c2e63fb306_cli_py.html  z_6034c9c2e63fb306_demo_app_py.html  z_6034c9c2e63fb306_demo_server_py.html  z_6034c9c2e63fb306_demo_tui_py.html  z_6034c9c2e63fb306_demos_py.html  z_6034c9c2e63fb306_display_py.html  z_6034c9c2e63fb306_gpu_py.html  z_6034c9c2e63fb306_metal_py.html  z_6034c9c2e63fb306_metrics_py.html  z_6034c9c2e63fb306_notebook_py.html  z_6034c9c2e63fb306_protocol_py.html  z_6034c9c2e63fb306_rendercanvas_py.html  z_6034c9c2e63fb306_server_py.html  z_6034c9c2e63fb306_session_py.html  z_6034c9c2e63fb306_sources_py.html  z_6034c9c2e63fb306_transport_py.html  z_6034c9c2e63fb306_types_py.html
scripts/: build-cuda-av-wheel.sh  build.sh  install-gpu.sh  pre-release.sh  publish.sh  rebuild-nvenc.sh  release.sh  setup.sh
src/pdum/rfb/: __init__.py  adaptive.py  asgi.py  auth.py  benchmark.py  cli.py  demo_app.py  demo_server.py  demo_tui.py  demos.py  display.py  gpu.py  metal.py  metrics.py  notebook.py  protocol.py  rendercanvas.py  server.py  session.py  sources.py  testing.py  transport.py  types.py
src/pdum/rfb/encoders/: __init__.py  base.py  h264_cpu.py  image.py  nvenc.py  nvenc_cpu.py  nvenc_cuda.py  nvenc_gpu_pdum.py  nvenc_gpu_pyav.py  pyav_h264.py  vtenc.py
src/pdum/rfb/static/: widget.js
src/pdum/rfb/static/demo/: index.html
src/pdum/rfb/static/demo/assets/: client.js  index.css  index.js  index2.js  reactViewer.js
tests/: test_adaptive.py  test_asgi.py  test_benchmark.py  test_cli.py  test_demo.py  test_display.py  test_example.py  test_gpu.py  test_image_encoder.py  test_metal.py  test_multistream.py  test_negotiation.py  test_notebook_widget.py  test_nvenc.py  test_nvenc_gpu_pdum.py  test_protocol.py  test_pyav_h264.py  test_rendercanvas_backend.py  test_rendercanvas_render.py  test_server_integration.py  test_session.py  test_sizing.py  test_synthetic_source.py  test_vtenc.py
widgets/: anywidget-harness.html  index.html  package.json  playwright.config.ts  playwright.demo.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.anywidget.json  tsconfig.json  tsconfig.worker.json  vite.anywidget.config.ts  vite.config.ts  vite.demo.config.ts  vitest.config.ts
widgets/anywidget/: chrome.ts  entry.ts
widgets/demo/: anywidget-harness.ts  main.ts  style.css
widgets/src/: RemoteFramebufferView.ts  backpressure.ts  capabilities.ts  debug.ts  eventTypes.ts  events.ts  index.ts  protocol.ts  serverStats.ts  types.ts  viewport.ts  vite-env.d.ts  workerFactory.ts
widgets/src/worker/: entry.ts  imageDecode.ts  renderer.ts  stallWatchdog.ts  videoDecode.ts
widgets/tests/: testPattern.ts
widgets/tests/e2e/: anywidget.spec.ts  debug.spec.ts  events.spec.ts  fit.spec.ts  hidpi.spec.ts  image-path.spec.ts  video-path.spec.ts
widgets/tests/fixtures/protocol/: image_jpeg.json  unicode_header.json  video_annexb.json
widgets/tests/unit/: backpressure.test.ts  capabilities.test.ts  events.test.ts  protocol.test.ts  serverStats.test.ts  stallWatchdog.test.ts  testPattern.test.ts  viewport.test.ts
