[project]
name = "habemus-papadum-rfb"
version = "0.1.0-alpha"
description = "Remote Frame Buffer"
readme = "README.md"
license = { file = "LICENSE" }
keywords = []
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

authors = [
    { name = "Nehal Patel", email = "nehal@alum.mit.edu" }
]
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.5.0",
    "pillow>=12.2.0",
    "websockets>=16.0",
]

[project.urls]
Homepage = "https://github.com/habemus-papadum/pdum_rfb"
Repository = "https://github.com/habemus-papadum/pdum_rfb"
Documentation = "https://github.com/habemus-papadum/pdum_rfb"

[project.optional-dependencies]
h264 = [
    "av>=17.1.0",
]
# Hardware H.264 via NVIDIA NVENC. The Python requirement is the same PyAV wheel
# as [h264] (its bundled ffmpeg ships the h264_nvenc encoder); the actual GPU
# requirement is a host NVIDIA driver + an NVENC-capable card, which pip cannot
# install. NVIDIA's own PyNvVideoCodec is intentionally NOT used: it publishes no
# cp314 wheel and no sdist, so it cannot install on this project's Python 3.14+.
# Availability is verified at runtime by pdum.rfb.encoders.nvenc.nvenc_available().
nvenc = [
    "av>=17.1.0",
]
# Zero-copy CUDA->NVENC: a CuPy/DLPack GPU buffer is fed straight to h264_nvenc with
# no host copy (~2.4-4.3x lower latency; see docs/gpu_zerocopy.md). Two requirements:
#   1. CuPy matching your CUDA toolkit -> pick the extra below (these install today);
#   2. PyAV >= 18 (the encode-side hw_frames_ctx wiring). PyAV 18 is NOT on PyPI yet,
#      so install it via scripts/install-gpu.sh (source build, commit-pinned) or a
#      prebuilt self-contained wheel (scripts/build-cuda-av-wheel.sh -> GitHub release).
#      WHEN PyAV 18.0 SHIPS ON PyPI: add "av>=18" to each extra below and GPU support
#      becomes a one-step `pip install habemus-papadum-rfb[gpu-cuda13]`.
gpu-cuda13 = [
    "cupy-cuda13x>=14",  # CUDA 13.x  (add "av>=18" when released)
]
gpu-cuda12 = [
    "cupy-cuda12x>=13",  # CUDA 12.x  (add "av>=18" when released)
]
# Alternative GPU H.264/HEVC backend via NVIDIA's Video Codec SDK encoder instead
# of PyAV/ffmpeg (encode-only spike in vendor/nvenc-encode-spike; see
# docs/nvenc_sdk_evaluation.md). It needs NO PyAV at all and builds on Python 3.14
# (upstream PyNvVideoCodec does neither). The SDK wheel `pdum-rfb-nvenc-sdk` is not
# on PyPI (PyPI forbids the direct-reference URL it would need); install it from
# this repo's GitHub Releases:
#   uv pip install habemus-papadum-rfb[gpu-nvenc-sdk]
#   uv pip install <release-url>/pdum_rfb_nvenc_sdk-<...>.whl   # the SDK wheel itself
# This extra pulls only the pip-installable half (CuPy); use cupy-cuda12x for CUDA 12.
gpu-nvenc-sdk = [
    "cupy-cuda13x>=14",  # + pdum-rfb-nvenc-sdk wheel from GitHub Releases (see comment)
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pdum"]

[dependency-groups]
dev = [
    "hatch>=1.14.2",
    "pytest>=8.0.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.13.3",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.5.0",
    "mkdocstrings>=0.26.1",
    "mkdocstrings-python>=1.11.1",
    "mkdocs-jupyter>=0.25.1",
    "jupyter>=1.1.1",
    "rich>=13.7.1",
    "inquirerpy>=0.3.4",
    "pre-commit>=3.7.0",
    "watchdog>=3.0.0",
    "av>=17.1.0",
    "pytest-asyncio>=1.4.0",
    "cupy-cuda13x>=14",
]

[tool.ruff]
target-version = "py314"
line-length = 120
exclude = []

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-s"
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["src/pdum/rfb"]
relative_files = true
omit = [
    "*/tests/*",
    "*/testing.py",
]
