[project]
name = "habemus-papadum-rfb"
version = "0.1.0-alpha"
description = "Remote Frame Buffer"
readme = "README.md"
license = { file = "LICENSE" }
keywords = []
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

authors = [
    { name = "Nehal Patel", email = "nehal@alum.mit.edu" }
]
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.5.0",
    "pillow>=12.2.0",
    "websockets>=16.0",
]

[project.urls]
Homepage = "https://github.com/habemus-papadum/pdum_rfb"
Repository = "https://github.com/habemus-papadum/pdum_rfb"
Documentation = "https://github.com/habemus-papadum/pdum_rfb"

[project.scripts]
pdum-rfb = "pdum.rfb.cli:app"

[project.optional-dependencies]
h264 = [
    "av>=17.1.0",
]
# Hardware H.264 via NVIDIA NVENC. The Python requirement is the same PyAV wheel
# as [h264] (its bundled ffmpeg ships the h264_nvenc encoder); the actual GPU
# requirement is a host NVIDIA driver + an NVENC-capable card, which pip cannot
# install. NVIDIA's own PyNvVideoCodec is intentionally NOT used: it publishes no
# cp314 wheel and no sdist, so it cannot install on this project's Python 3.14+.
# Availability is verified at runtime by pdum.rfb.encoders.nvenc.nvenc_available().
nvenc = [
    "av>=17.1.0",
]
# Zero-copy CUDA->NVENC: a CuPy/DLPack GPU buffer is fed straight to h264_nvenc with
# no host copy (~2.4-4.3x lower latency; see docs/gpu_zerocopy.md). Two requirements:
#   1. CuPy matching your CUDA toolkit -> pick the extra below (these install today);
#   2. PyAV >= 18 (the encode-side hw_frames_ctx wiring). PyAV 18 is NOT on PyPI yet,
#      so install it via scripts/install-gpu.sh (source build, commit-pinned) or a
#      prebuilt self-contained wheel (scripts/build-cuda-av-wheel.sh -> GitHub release).
#      WHEN PyAV 18.0 SHIPS ON PyPI: add "av>=18" to each extra below and GPU support
#      becomes a one-step `pip install habemus-papadum-rfb[gpu-cuda13]`.
gpu-cuda13 = [
    "cupy-cuda13x>=14",  # CUDA 13.x  (add "av>=18" when released)
]
gpu-cuda12 = [
    "cupy-cuda12x>=13",  # CUDA 12.x  (add "av>=18" when released)
]
# Alternative GPU H.264/HEVC backend via NVIDIA's Video Codec SDK encoder instead of
# PyAV/ffmpeg — the sibling package habemus-papadum-nvenc (import pdum.nvenc), built
# from packages/nvenc/ (a uv workspace member). It needs NO PyAV and works on Python
# 3.14. Pulls the SDK encoder + CuPy (use cupy-cuda12x for a CUDA 12 toolkit).
# See docs/nvenc_sdk_evaluation.md.
gpu-nvenc-sdk = [
    "habemus-papadum-nvenc",
    "cupy-cuda13x>=14",
]
# `pdum-rfb doctor` / `pdum-rfb benchmark` diagnostics CLI.
cli = [
    "typer>=0.12",
    "rich>=13.7",
]
# `pdum-rfb doctor` with the cross-platform encoders installed, so a fresh
# `uvx --from 'habemus-papadum-rfb[doctor]' pdum-rfb doctor` reports both what runs on
# this platform *and* what is actually importable here (not just "install X"). Composed
# from the other extras (self-referencing) so there are no copied dependency lines to
# keep in sync; the platform-specific paths (CuPy/VideoToolbox/NVENC-SDK) can't be blanket
# deps and are reported as "available on this platform — install …".
doctor = [
    "habemus-papadum-rfb[cli,h264]",
]
rendercanvas = [
    "rendercanvas>=2.0",
]
# Mount the framebuffer inside an existing Starlette/FastAPI (ASGI) app over the
# same Display/RfbSession core, so it shares the app's origin and session/OAuth
# cookie. Purely opt-in: the standalone serve() path (zero-extra-deps websockets
# listener) is unchanged. See docs/asgi.md.
asgi = [
    "starlette>=0.37",
]
# macOS hardware H.264 via Apple VideoToolbox — the sibling package habemus-papadum-vtenc
# (import pdum.vtenc), built from packages/vtenc/ (a uv workspace member). It needs NO
# PyAV and works on Python 3.14; the runtime requirement is just macOS (the VideoToolbox
# frameworks are system-provided). The natural GPU frame producer is MLX (see the mac-dev
# group). See docs/mlx_metal_videotoolbox_encoder_design.md.
mac-vt = [
    "habemus-papadum-vtenc",
]
# `pdum-rfb demo` — a self-contained web app. One Python process serves the prebuilt SPA
# (committed under src/pdum/rfb/static/demo/), a REST control plane, and the framebuffer
# WebSocket(s) over one uvicorn origin; the browser holds the viewer + all controls. No
# Node/Vite at runtime. Meant for `uvx --from 'habemus-papadum-rfb[demo]' pdum-rfb demo`.
# A dev/eval harness, not a runtime dep. Self-references [cli] for the Typer entry point.
demo = [
    "habemus-papadum-rfb[cli]",
    "starlette>=0.37",
    "uvicorn>=0.30",
]
# Jupyter/marimo notebook widget (pdum.rfb.notebook). The prebuilt, inlined-worker ESM
# bundle ships in the wheel (src/pdum/rfb/static/widget.{js,css}); this pulls the Python
# runtime. See docs/notebook.md.
anywidget = [
    "anywidget>=0.9",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# pdum is a PEP 420 namespace (no src/pdum/__init__.py) shared with the sibling
# habemus-papadum-nvenc package, which contributes pdum.nvenc.
packages = ["src/pdum"]

# The anywidget bundle (committed, built from widgets/anywidget/) is package data. Tracked
# files under src/pdum ship by default (like py.typed); this makes it explicit. The
# `pdum-rfb demo` SPA (committed under static/demo/, built from widgets/packages/demo-app/
# via `pnpm -C widgets build:demo`) ships by that same default-inclusion of tracked files —
# a directory force-include here would double-add each file, so it is intentionally omitted.
[tool.hatch.build.targets.wheel.force-include]
"src/pdum/rfb/static/widget.js" = "pdum/rfb/static/widget.js"
"src/pdum/rfb/static/widget.css" = "pdum/rfb/static/widget.css"

[tool.uv]
# Groups installed automatically by a bare `uv sync` (including `--frozen`). `viz` pulls
# the dev render stack (rendercanvas + wgpu + pygfx) onto a dev box so the rendercanvas
# backend can be exercised locally. CI's plain `uv sync --frozen` will include it too;
# pass `--no-group viz` in CI to keep it lean.
default-groups = ["dev", "viz"]

# --- uv workspace: this repo hosts habemus-papadum-rfb (root) + packages/* ---
[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
habemus-papadum-nvenc = { workspace = true }
habemus-papadum-vtenc = { workspace = true }

[dependency-groups]
dev = [
    "hatch>=1.14.2",
    "pytest>=8.0.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.13.3",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.5.0",
    "mkdocstrings>=0.26.1",
    "mkdocstrings-python>=1.11.1",
    "mkdocs-jupyter>=0.25.1",
    "jupyter>=1.1.1",
    "rich>=13.7.1",
    "inquirerpy>=0.3.4",
    "pre-commit>=3.7.0",
    "watchdog>=3.0.0",
    "av>=17.1.0",
    "anywidget>=0.9",
    "pytest-asyncio>=1.4.0",
    "typer>=0.12",
    "starlette>=0.37",  # the [asgi] adapter + the `pdum-rfb demo` control plane (TestClient in tests)
    "uvicorn>=0.30",  # serves the `pdum-rfb demo` web app
]
gpu-dev = [
    "cupy-cuda13x>=14",
]
# Dev-box-only (macOS) MLX so the VideoToolbox backend can be exercised end-to-end
# (render frames in MLX -> NV12 -> VtEncoder). MLX is the example/test frame producer,
# not a shipped runtime dep of the library. Mirrors gpu-dev.
mac-dev = [
    "mlx>=0.21; sys_platform == 'darwin'",
]
# Dev-box-only render stack (NOT shipped) to exercise the rendercanvas backend end-to-end.
# The library's runtime dep is just the `[rendercanvas]` extra; wgpu/pygfx are dev tooling.
viz = [
    "rendercanvas>=2.0",
    "wgpu>=0.19",
    "pygfx>=0.2",
]

[tool.ruff]
target-version = "py314"
line-length = 120
exclude = []

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-s"
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["src/pdum/rfb"]
relative_files = true
omit = [
    "*/tests/*",
    "*/testing.py",
]
